<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".SignIn">

    <!--Team mate log-->
    <ImageView
        android:id="@+id/teammate_signin"
        android:layout_width="200sp"
        android:layout_height="142dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="100sp"
        android:src="@drawable/teammates" />


    <!--Sign In Text View-->
    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="168dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pleaseSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="202dp"
        android:text="@string/please_sign_in_to_continue"
        android:textColor="@android:color/background_dark"
        android:textSize="15sp" />

    <!--Enter your Email Address -->
    <EditText
        android:id="@+id/emailSignIn"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:hint="@string/enter_your_email_address" />


    <!--ENter Yur password-->
    <EditText
        android:id="@+id/passwordSignIn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="230dp"
        android:hint="@string/enter_your_password" />


    <!--FOrget Password?-->
    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="203dp"
        android:text="@string/forget_password"
        android:textColor="@android:color/background_dark"
        android:textSize="15sp" />


    <!--Sign in Button-->
    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/teammate_signin"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="91dp"
        android:text="@string/sign_in"
        android:backgroundTint="@color/team"
        android:textColor="@android:color/white"
        android:layout_alignRight="@+id/teammate_signin"
        android:onClick="signInHandler"/>

    <!--No accoount? Create One-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/dontHaveOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_one" />

        <TextView
            android:id="@+id/createOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:paddingStart="10sp"
            android:text="@string/create_one"
            android:textColor="@color/colorPrimary"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>
</RelativeLayout>